--- a/scss/_block/_hero.scss
+++ b/scss/_block/_hero.scss
@@ -1,7 +1,87 @@
-.hero{
-    margin-top: 44px;
+.hero {
+    padding-top: 44px;
+    margin-bottom: 168px;
 }
 
-.hero__itim{
+.hero__itim {
     background-image: url(../../img/img2.png);
+    background-repeat: no-repeat;
+    padding-left: 85px;
+}
+
+.hero__inner {
+    font-family: 'Fraunces';
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 48px;
+    color: #FEFCF7;
+    padding-top: 137px;
+    margin-bottom: 24px;
+}
+
+.hero__taxt {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FEFCF7;
+    max-width: 445px;
+    padding-bottom: 137px;
+}
+
+@media screen and (max-width:1000px) {
+    .hero__itim {
+        background-image: url(../../img/img3.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        padding: 118px 48px 118px 48px ;
+    }
+
+    .hero{
+        padding-top: 53px;
+        margin-bottom: 144px;
+
+    }
+
+    .hero__inner {
+        font-size: 32px;
+        line-height: 40px;
+        padding-top: 0;
+    }
+
+    .hero__taxt {
+        font-size: 15px;
+        line-height: 25px;
+        max-width: 398px;
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (max-width:735px) {
+    .hero__itim {
+        background-image: url(../../img/img4.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        text-align: center;
+        padding: 111px 24px 87px 24px;
+    }
+
+    .hero{
+        padding-top: 40px;
+        margin-bottom: 120px;
+    }
+
+    .hero__inner {
+        font-size: 28px;
+        line-height: 28px;
+        padding-top: 0;
+
+    }
+
+    .hero__taxt {
+        font-size: 15px;
+        line-height: 25px;
+        max-width: 279px;
+        margin: 0 auto;
+        padding-bottom: 0;
+    }
 }
