--- a/css/main.css
+++ b/css/main.css
@@ -273,15 +273,16 @@ body {
     max-width: 100%;
   }
 }
-.quality__container {
-  background-image: url(../../img/qualit-bgi.png);
-  z-index: -1;
-  background-repeat: no-repeat;
-  padding-left: 85px;
-  height: 474px;
-  display: flex;
-  gap: 125px;
+.qualit__felx {
+  background-color: #2C343E;
+  border-radius: 10px;
+  width: 100%;
+  position: relative;
   margin-bottom: 168px;
+}
+
+.qualit__felx {
+  display: flex;
 }
 
 .quality__inner {
@@ -290,21 +291,280 @@ body {
   font-size: 40px;
   line-height: 48px;
   color: #FEFCF7;
-  padding-top: 88px;
 }
 
-.quality__taxt {
+.qualit__item {
+  padding: 88px 125px 176px 85px;
+}
+
+.qualit__taxt {
+  font-family: "Barlow";
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
   color: #FEFCF7;
   opacity: 0.8;
   max-width: 540px;
-  margin-top: 32px;
-  padding-bottom: 176px;
+  margin-top: 24px;
 }
 
-.quality__inner-img {
-  z-index: 5;
+.qualit__img {
+  position: absolute;
+  width: 445px;
+  height: 475px;
+  right: 85px;
+  bottom: 88px;
+}
+
+@media screen and (max-width: 1000px) {
+  .qualit__container {
+    margin-top: 304px;
+  }
+  .qualit__felx {
+    width: 100%;
+    height: 488px;
+    margin-bottom: 144px;
+  }
+  .qualit__felx {
+    display: inline-block;
+  }
+  .quality__inner {
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .qualit__item {
+    padding: 240px 74px 67px 74px;
+    text-align: center;
+  }
+  .qualit__taxt {
+    font-size: 15px;
+    line-height: 25px;
+    margin-left: 0;
+    margin: 0 auto;
+  }
+  .qualit__img img {
+    display: none;
+  }
+  .qualit__img {
+    background-image: url(../../img/quaality2.png);
+    background-repeat: no-repeat;
+    width: 573px;
+    height: 320px;
+    bottom: 328px;
+  }
+}
+@media screen and (max-width: 890px) {
+  .qualit__container {
+    margin-top: 304px;
+  }
+  .qualit__felx {
+    width: 100%;
+    height: 509px;
+    margin-bottom: 144px;
+  }
+  .quality__inner {
+    font-size: 28px;
+    line-height: 28px;
+    margin-bottom: 24px;
+  }
+  .qualit__item {
+    padding: 142px 24px 61px 24px;
+    text-align: center;
+  }
+  .qualit__taxt {
+    font-size: 15px;
+    line-height: 25px;
+    margin-left: 0;
+    margin: 0 auto;
+  }
+  .qualit__img img {
+    display: none;
+  }
+  .qualit__img {
+    background-image: url(../../img/quayti3.png);
+    background-repeat: no-repeat;
+    width: 279px;
+    height: 156px;
+    top: -64px;
+  }
+}
+.unite__container {
+  max-width: 1045px;
+  margin: 0 auto;
+  margin-bottom: 168px;
+}
+
+.unite__item {
+  text-align: start;
+}
+
+.unite__inner {
+  font-family: "Fraunces";
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #83888F;
+}
+
+.unite__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.unite__imge {
+  margin-top: 72px;
+  width: 51px;
+  height: 51px;
+}
+
+.unite__btm {
+  margin-top: 44px;
+  font-family: "Fraunces";
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  color: #333D4B;
+}
+
+.unite__taxt {
+  margin-top: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+}
+
+@media screen and (max-width: 1000px) {
+  .unite__container {
+    width: 100%;
+    margin-bottom: 144px;
+    margin-left: 20px;
+  }
+  .unite__inner {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .unite__item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .unite__imge {
+    margin-top: 72px;
+    width: 51px;
+    height: 51px;
+  }
+  .unite__btm {
+    margin-top: 49px;
+    font-size: 24px;
+    line-height: 36px;
+  }
+  .unite__taxt {
+    margin-top: 21px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .unite__container {
+    width: 100%;
+    margin-bottom: 120px;
+    margin-left: 0;
+    text-align: center;
+  }
+  .unite__inner {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .unite__item {
+    display: inline-block;
+    text-align: center;
+  }
+  .unite__btm {
+    margin-top: 48px;
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .unite__taxt {
+    margin-top: 22px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .unite__hero + .unite__hero {
+    margin-top: 80px;
+  }
+}
+.sitx-footer {
+  background: #2C343E;
   margin-bottom: 88px;
+}
+
+.sitx-footer__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 47px 0;
+  margin: 0 20px;
+}
+
+.sitx-footer__sitx-link {
+  display: flex;
+  align-items: center;
+  gap: 33px;
+}
+
+.footer__ikonca a:hover {
+  background: #FDD6BA;
+}
+
+.footer__ikonca {
+  display: flex;
+  gap: 24px;
+}
+
+.foont__imge {
+  flex-shrink: 0;
+}
+
+.sitx-footer__link a {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #83888F;
+}
+.sitx-footer__link a:hover {
+  color: #FEFCF7;
+}
+
+@media screen and (max-width: 997px) {
+  .sitx-footer__container {
+    display: inline-block;
+    text-align: center;
+  }
+  .sitx-footer {
+    text-align: center;
+  }
+  .sitx-footer__sitx-link {
+    margin: 32px 0;
+  }
+  .footer__ikonca {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 735px) {
+  .sitx-footer__sitx-link {
+    display: inline-block;
+    margin: 45px 0;
+  }
+  .sitx-footer__link + .sitx-footer__link {
+    margin-top: 24px;
+  }
+  .sitx-footer__img {
+    max-width: 217.85px;
+    margin-top: 54px;
+  }
+  .footer__ikonca {
+    margin-bottom: 54px;
+  }
 }/*# sourceMappingURL=main.css.map */
