--- a/scss/_block/_quality.scss
+++ b/scss/_block/_quality.scss
@@ -1,12 +1,13 @@
-.quality__container {
-    background-image: url(../../img/qualit-bgi.png);
-    z-index: -1;
-    background-repeat: no-repeat;
-    padding-left: 85px;
-    height: 474px;
-    display: flex;
-    gap: 125px;
+.qualit__felx {
+    background-color: #2C343E;
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
     margin-bottom: 168px;
+}
+
+.qualit__felx {
+    display: flex;
 }
 
 .quality__inner {
@@ -15,21 +16,126 @@
     font-size: 40px;
     line-height: 48px;
     color: #FEFCF7;
-    padding-top: 88px;
+
+
 }
 
-.quality__taxt {
+.qualit__item {
+    padding: 88px 125px 176px 85px;
+}
+
+.qualit__taxt {
+    font-family: 'Barlow';
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
     color: #FEFCF7;
     opacity: 0.8;
     max-width: 540px;
-    margin-top: 32px;
-    padding-bottom: 176px;
+    margin-top: 24px;
 }
 
-.quality__inner-img{
-z-index: 5;
-margin-bottom: 88px;
+
+.qualit__img {
+    position: absolute;
+    width: 445px;
+    height: 475px;
+    right: 85px;
+    bottom: 88px;
+}
+
+@media screen and (max-width:1000px) {
+    .qualit__container {
+        margin-top: 304px;
+     
+    }
+
+    .qualit__felx {
+        width: 100%;
+        height: 488px;
+        margin-bottom: 144px;
+
+    }
+
+    .qualit__felx {
+        display: inline-block;
+    }
+
+    .quality__inner {
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .qualit__item {
+        padding: 240px 74px 67px 74px;
+        text-align: center;
+    }
+
+    .qualit__taxt {
+        font-size: 15px;
+        line-height: 25px;
+        margin-left: 0;
+        margin: 0 auto;
+    }
+
+
+    .qualit__img img {
+        display: none;
+    }
+
+    .qualit__img {
+        background-image: url(../../img/quaality2.png);
+        background-repeat: no-repeat;
+        width: 573px;
+        height: 320px;
+        bottom: 328px;
+
+    }
+}
+
+@media screen and (max-width:890px) {
+    .qualit__container {
+        margin-top: 304px;
+    }
+
+    .qualit__felx {
+        width: 100%;
+        height: 509px;
+        margin-bottom: 144px;
+
+    }
+
+
+    .quality__inner {
+        font-size: 28px;
+        line-height: 28px;
+        margin-bottom: 24px;
+    }
+
+    .qualit__item {
+        padding: 142px 24px 61px 24px;
+        text-align: center;
+    }
+
+    .qualit__taxt {
+        font-size: 15px;
+        line-height: 25px;
+        margin-left: 0;
+        margin: 0 auto;
+    }
+
+
+    .qualit__img img {
+        display: none;
+    }
+
+    .qualit__img {
+        background-image: url(../../img/quayti3.png);
+        background-repeat: no-repeat;
+        width: 279px;
+        height: 156px;
+        top: -64px;
+
+
+    }
 }
