--- a/scss/_block/_quality.scss
+++ b/scss/_block/_quality.scss
@@ -54,7 +54,7 @@
         width: 100%;
         height: 488px;
         margin-bottom: 144px;
-
+      
     }
 
     .qualit__felx {
@@ -89,7 +89,7 @@
         width: 573px;
         height: 320px;
         bottom: 328px;
-
+        transform: translate(-50%,-50%);
     }
 }
 
